# VGPU

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  Method of use.txt  README.md  a  a.c  aminimake_vgpu.sh  b.yml  version.h
GLAPI batch process/: pack.c  pack__.c  shaderconv.c
compile/: Android.mk  CMakeLists.txt
glslang/: Android.mk
glslang/glslang/: CMakeLists.txt
glslang/glslang/Include/: PoolAlloc.h
include/android/: log.h
include/context_gl/: context.h  get.h  get_context_example.h
include/context_gl/gles_ctx/: context.h
include/context_gl/gles_ctx/context_t/: ggl_context.h  ggl_fixed.h
include/gl_context/: EGL_ctx.h  GL_ctx.h  context.h  get.h  typedef.h  vk_ctx.h
include/gl_ctx/: get.h
include/loader/: vk_loader.h
shaderconv test/: Batch.c  Batch_.c  Batch_find.c  pack_.c  shader.c  shader.fsh  shader_test.c  shaderconv.c  shaderconv.h  use.txt
src/: About Loading.txt  load.h  load_.h  pack.c  toext.h
src/EGL/source/: Android.mk
src/EGL/source/api/: egl.cpp  eglConfig_android.h
src/EGL/source/display/: displayDriver.cpp
src/EGL/source/platform/: platformFactory.cpp
src/EGL/source/utils/: auxs.h  ctx.cpp  ctx.h  egl_state.cpp  egl_state.h
src/EGL/source/vulkan/: vk_global.cpp  vk_global.h  vk_wrapper.cpp  vk_wrapper.h
src/GL API batch process/: Batch_.c  Instruction for use.txt  gl32.h  gl32_.h
src/GL/context/: contextRendering.cpp
src/GL/glslang/: glslangShaderCompiler.h
src/GL/resources/: shader.cpp
src/GL/vulkan/: buffer.cpp  context.cpp  image.cpp  imageView.cpp  pipeline.cpp
src/GLES/resources/: shaderProgram.cpp
src/GLES/utils/: globals.h
src/GLES/vulkan/: cbManager.cpp  framebuffer.cpp  memory.cpp  pipeline.h  renderPass.cpp  sampler.cpp
src/gl/: array.c  blend.c  buffers.c  build_info.c  const.h  depth.c  drawing.c  framebuffers.c  getter.c  gl4es.c  gl_lookup.c  gl_lookup.h  glstate.c  init.c  listdraw.c  loader.c  loader.h  logs_darwin.m  matvec.c  program.c  raster.c  shader.c  shaderconv.c  state.h  stencil.c  texture.c  texture_3d.c  texture_params.c  texture_read.c  uniform.c  vertexattrib.c
src/gl/pack/: Initialization.c  Initialization.h  Initialization_.c  Initialization_.h  gl32.h  glu_pack.c  glu_pack.h  load.c  load.h  load_.h  pack.c  pack.h  pack1.h  pack_.h  printf_def.h  shader.c  shader.h  shaderconv.c  shaderconv.h
src/gl/wrap/: gl4es.h  gl4eswraps.c  glstub.c  setenv.c  setenv.h
src/glx/: glx.c  hardext.c  hardext.h
src/loader/: vk_loader.cpp  vk_loader_.h
src/shader conv test/: Batch_.c  _shader.c  shader.c  shader.h  use.txt
test/test_dynamic link library/: Method of use.txt
test_dynamic link library/: Method of use.txt  main.c
(+5 files in other folders)
